finished first section of a2

--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -5,10 +5,16 @@
     <title>Navigation</title>
   </head>
   <body>
-    <h1>Links to other Pages</h1>
     <ul>
-      <l1></l1>
+      <li><a href="home.html">Home</a></li>
+      <li><a href="#">Explore</a></li>
+      <li><a href="#">Notifications</a></li>
+      <li><a href="#">Messages</a></li>
+      <li><a href="#">Bookmarks</a></li>
+      <li><a href="#">Lists</a></li>
+      <li><a href="#">Profile</a></li>
+      <li><a href="#">Tuit</a></li>
+      <li><a href="#">Reply</a></li>
     </ul>
   </body>
-  
 </html>
