--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,14 @@
-<h1>Web Dev Assignments</h1>
-<ul>
- <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
- <li><a href="tuiter/navigation.html">Tuiter</a></li>
-</ul> 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>CS 5610 Assignments</title>
+  </head>
+  <body>
+    <h1>Web Dev Assignments</h1>
+    <ul>
+      <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
+      <li><a href="tuiter/navigation.html">Tuiter</a></li>
+    </ul>
+  </body>
+</html>
