--- a/public/labs/a3/index.html
+++ b/public/labs/a3/index.html
@@ -1,11 +1,15 @@
 <head>
-  <style>
-    p {
-      background-color: blue;
-      color: white;
-    }
-  </style>
-</head>
+    <!--style>
+        p {
+            background-color: blue;
+            color: white;
+        }
+    </style-->
+    <link href="index.css"
+          rel="stylesheet"/>
+ </head>
+ 
+ 
 
 <h1>Cascading Style Sheet (CSS)</h1>
 <h2>Style attribute and tag</h2>
