--- a/public/labs/a3/index.html
+++ b/public/labs/a3/index.html
@@ -29,3 +29,11 @@ header and then refer to the tag by their name,
 ID, or class This paragraph's style is set by a 
 rule referring to the P tags
 </p>
+
+<h3>Link tag</h3>
+<p>
+   The best way to apply CSS rules is to declare
+   them in a separate CSS file and load it with 
+   the LINK tag. Always use this method.
+</p>
+
