--- a/public/labs/a3/index.html
+++ b/public/labs/a3/index.html
@@ -16,9 +16,7 @@
 <h3>Style attribute</h3>
 
 <p style="background-color: blue; color: white">
-  Style attribute allows configuring look and feel right on the element.
-  Although it's very convenient it is considered bad practice and you should
-  avoid using the style attribute
+  Style attribute allows configuring look and feel right on the element. Although it's very convenient it is considered bad practice and you should avoid using the style attribute
 </p>
 
 <h3>Style tag</h3>
@@ -36,4 +34,3 @@ rule referring to the P tags
    them in a separate CSS file and load it with 
    the LINK tag. Always use this method.
 </p>
-
