--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <link href="index.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Explore</title>
   </head>
-  <body class="wd-bg-color-black wd-border-style wd-border-color wd-left-offset"></body>
-  <div class="wd-search-container">
-    <form>
-      <input type="text" placeholder="Search Tuiter">
-    </form>
-  </div>
+  <body
+    class="wd-bg-color-black wd-border-style wd-border-color wd-left-offset"
+  >
+    <div class="wd-search-container">
+      <form>
+        <input type="text" placeholder="Search Tuiter" />
+      </form>
+      <a href="explore-settings.html"><i class="fa fa-gear" style="font-size:24px"></i></i></a>
+    </div>
+  </body>
 </html>
