--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -12,7 +12,7 @@
       <form>
         <input type="text" placeholder="Search Tuiter" />
       </form>
-      <a href="explore-settings.html"><i class="fa fa-gear" style="font-size:24px"></i></i></a>
+      <a class="wd-settings-gear" href="explore-settings.html"><i class="fa fa-gear" style="font-size:24px"></i></i></a>
     </div>
   </body>
 </html>
