--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -10,9 +10,9 @@
   >
     <div class="wd-search-container">
       <form>
-        <input type="text" placeholder="Search Tuiter" />
+        <input class="wd-search-container-input" type="text" placeholder="Search Tuiter" />
       </form>
-      <a class="wd-settings-gear" href="explore-settings.html"><i class="fa fa-gear" style="font-size:24px"></i></i></a>
+      <a class="wd-settings-gear" href="explore-settings.html"><i class="fa fa-gear"></i></i></a>
     </div>
   </body>
 </html>
