--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -14,5 +14,14 @@
       </form>
       <a class="wd-settings-gear" href="explore-settings.html"><i class="fa fa-gear"></i></i></a>
     </div>
+    
+    <div class="wd-link-container">
+      <a href="#" class="wd-link-container-highlighted">For you</a>
+      <a href="#" class="wd-link-container">Trending</a>
+      <a href="#" class="wd-link-container">COVID-19</a>
+      <a href="#" class="wd-link-container">News</a>
+      <a href="#" class="wd-link-container">Sports</a>
+      <a href="#" class="wd-link-container">Entertainment</a>
+    </div>
   </body>
 </html>
