--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -23,5 +23,23 @@
       <a href="#" class="wd-link-container">Sports</a>
       <a href="#" class="wd-link-container">Enter</a>
     </div>
+
+    <div class="wd-suggested-posts">
+      <div class="wd-post wd-vertical-spacing">
+        <div class="wd-topic-tuits">Trending in Science</div>
+        <div class="wd-suggested-post-title">The Latest Breakthrough in Quantum Computing</div>
+        <div class="wd-topic-tuits">55.1K Tuits</div>
+      </div>
+      <div class="wd-post">
+        <div class="wd-topic-tuits">Sports - Trending</div>
+        <div class="wd-suggested-post-title">The Big Game: A Recap</div>
+        <div class="wd-topic-tuits">101K Tuits</div>
+      </div>
+      <div class="wd-post">
+        <div class="wd-topic-tuits">Trending in United States</div>
+        <div class="wd-suggested-post-title">The Impact of the Latest Presidential Election</div>
+        <div class="wd-topic-tuits">9,218 Tuits</div>
+      </div>
+    </div>
   </body>
 </html>
