--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <link href="index.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Explore</title>
   </head>
   <body
@@ -10,11 +13,17 @@
   >
     <div class="wd-search-container">
       <form>
-        <input class="wd-search-container-input" type="text" placeholder="Search Tuiter" />
+        <input
+          class="wd-search-container-input"
+          type="text"
+          placeholder="Search Tuiter"
+        />
       </form>
-      <a class="wd-settings-gear" href="explore-settings.html"><i class="fa fa-gear"></i></i></a>
+      <a class="wd-settings-gear" href="explore-settings.html"
+        ><i class="fa fa-gear"></i
+      ></a>
     </div>
-    
+
     <div class="wd-vertical-spacing">
       <a href="#" class="wd-link-container-highlighted">For you</a>
       <a href="#" class="wd-link-container">Trending</a>
@@ -27,18 +36,35 @@
     <div class="wd-suggested-posts">
       <div class="wd-post wd-vertical-spacing">
         <div class="wd-topic-tuits">Trending in Science</div>
-        <div class="wd-suggested-post-title">The Latest Breakthrough in Quantum Computing</div>
+        <div class="wd-suggested-post-title">
+          The Latest Breakthrough in Quantum Computing
+        </div>
         <div class="wd-topic-tuits">55.1K Tuits</div>
       </div>
+
       <div class="wd-post">
         <div class="wd-topic-tuits">Sports - Trending</div>
         <div class="wd-suggested-post-title">The Big Game: A Recap</div>
         <div class="wd-topic-tuits">101K Tuits</div>
       </div>
+
       <div class="wd-post">
         <div class="wd-topic-tuits">Trending in United States</div>
-        <div class="wd-suggested-post-title">The Impact of the Latest Presidential Election</div>
+        <div class="wd-suggested-post-title">
+          The Impact of the Latest Presidential Election
+        </div>
         <div class="wd-topic-tuits">9,218 Tuits</div>
+      </div>
+
+      <div class="wd-post">
+        <div class="wd-suggested-post-article-title">
+          The New York Times
+          <span class="wd-suggested-post-article-date"> · Yesterday</span>
+        </div>
+        <img class="wd-suggested-post-image" src="res/cnn.png">
+        <div class="wd-suggested-post-title">
+          CNN's Cuomo Connundrum: A star anchor with a brother in trouble
+        </div>
       </div>
     </div>
   </body>
