bootstrap-ify the navigation

--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Navigation</title>
+    <title>Tuiter Navigation</title>
   </head>
   <body>
+  <h1>Tuiter Navigation</h1>
     <ul>
       <li><a href="home.html">Home</a></li>
       <li><a href="explore/index.html">Explore</a></li>
