--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>CS 5610 Assignments</title>
+    <link href="vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Web Dev Assignments</h1>
-    <ul>
-      <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
-      <li><a href="tuiter/navigation.html">Tuiter</a></li>
+  <div class="container">
+    <h1>CS 5610: Web Dev Assignments</h1>
+    <ul class="list-group">
+      <li class="list-group-item"><a href="labs/a2/index.html">Assignment 2 Lab: HTML</a></li>
+      <li class="list-group-item"><a href="labs/a3/index.html">Assignment 3 Lab: CSS</a></li>
+      <li class="list-group-item"><a href="labs/a4/index.html">Assignment 4 Lab: Bootstrap</a></li>
+      <li class="list-group-item"><a href="tuiter/navigation.html">Tuiter</a></li>
     </ul>
+  </div>
   </body>
 </html>
