--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
   </head>
   <body>
   <div class="container">
-    <h1>CS 5610: Web Dev Assignments</h1>
+    <h1 class="mt-3 mb-3">CS 5610: Web Dev Assignments</h1>
     <ul class="list-group">
-      <li class="list-group-item"><a href="labs/a2/index.html">Assignment 2 Lab: HTML</a></li>
-      <li class="list-group-item"><a href="labs/a3/index.html">Assignment 3 Lab: CSS</a></li>
-      <li class="list-group-item"><a href="labs/a4/index.html">Assignment 4 Lab: Bootstrap</a></li>
+      <li class="list-group-item"><a href="labs/a2/index.html">Assignment 2: HTML</a></li>
+      <li class="list-group-item"><a href="labs/a3/index.html">Assignment 3: CSS</a></li>
+      <li class="list-group-item"><a href="labs/a4/index.html">Assignment 4: Bootstrap</a></li>
       <li class="list-group-item"><a href="tuiter/navigation.html">Tuiter</a></li>
     </ul>
   </div>
