--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -2,19 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Navigation</title>
+    <title>Tuiter Navigation</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <ul>
-      <li><a href="home.html">Home</a></li>
-      <li><a href="explore/index.html">Explore</a></li>
-      <li><a href="#">Notifications</a></li>
-      <li><a href="#">Messages</a></li>
-      <li><a href="bookmarks/index.html">Bookmarks</a></li>
-      <li><a href="#">Lists</a></li>
-      <li><a href="profile.html">Profile</a></li>
-      <li><a href="tuit.html">Tuit</a></li>
-      <li><a href="#">Reply</a></li>
-    </ul>
+    <div class="container">
+      <h1>Tuiter Navigation</h1>
+      <ul class="list-group">
+        <li class="list-group-item"><a href="home.html">Home</a></li>
+        <li class="list-group-item"><a href="explore/index.html">Explore</a></li>
+        <li class="list-group-item"><a href="#">Notifications</a></li>
+        <li class="list-group-item"><a href="#">Messages</a></li>
+        <li class="list-group-item"><a href="bookmarks/index.html">Bookmarks</a></li>
+        <li class="list-group-item"><a href="#">Lists</a></li>
+        <li class="list-group-item"><a href="profile.html">Profile</a></li>
+        <li class="list-group-item"><a href="tuit.html">Tuit</a></li>
+        <li class="list-group-item"><a href="#">Reply</a></li>
+      </ul>
+    </div>
   </body>
 </html>
