--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Tuiter Navigation</h1>
+      <h1 class="mb-3 mt-3">Tuiter Navigation</h1>
       <ul class="list-group">
         <li class="list-group-item"><a href="home.html">Home</a></li>
         <li class="list-group-item"><a href="explore/index.html">Explore</a></li>
