--- a/public/labs/a4/index.html
+++ b/public/labs/a4/index.html
@@ -528,7 +528,7 @@
       </h2>
       <div class="card" style="width: 18rem">
         <img
-          src="../../images/starrynight.jpg"
+          src="../../assets/starrynight.jpg"
           class="card-img-top"
           alt="..."
         />
