--- a/public/tuiter/explore/index-challenge.html
+++ b/public/tuiter/explore/index-challenge.html
@@ -7,47 +7,47 @@
           rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
           rel="stylesheet"/>
-    <link href="index.css" rel="stylesheet"/>
+    <link href="index-challenge.css" rel="stylesheet"/>
 </head>
 
 <body>
-<div class="container mt-2 mb-2">
+<div class="container mt-4 mb-4">
     <div class="row">
         <div class="col-sm-2 d-none d-sm-block col-lg-1 col-xl-2">
             <div class="list-group">
-                <div class="list-group-item">
-                    <i class="fab fa-twitter"></i></div>
-                <a href="#" class="list-group-item">
+                <div class="list-group-item wd-border-none">
+                    <i class="fab fa-twitter wd-icon-blue"></i></div>
+                <a href="#" class="list-group-item wd-border-none">
                     <i class="fas fa-home"></i>
                     <span class="d-none d-l-inline-block d-xl-inline-block">Home</span>
                 </a>
-                <a href="#" class="list-group-item active" aria-current="true">
+                <a href="#" class="list-group-item wd-border-none active" aria-current="true">
                     <i class="fas fa-hashtag"></i>
                     <span class="d-none d-l-inline-block d-xl-inline-block">Explore</span>
                 </a>
-                <a href="#" class="list-group-item">
+                <a href="#" class="list-group-item wd-border-none">
                     <i class="fas fa-bell"></i>
                     <span class="d-none d-l-inline-block d-xl-inline-block">Notifications</span>
                 </a>
-                <a href="#" class="list-group-item">
+                <a href="#" class="list-group-item wd-border-none">
                     <i class="fas fa-envelope"></i>
                     <span class="d-none d-l-inline-block d-xl-inline-block">Messages</span>
                 </a>
                 <a href="#"
-                   class="list-group-item">
+                   class="list-group-item wd-border-none">
                     <i class="fas fa-bookmark"></i>
                     <span class="d-none d-l-inline-block d-xl-inline-block">Bookmarks</span>
                 </a>
-                <a href="#" class="list-group-item">
+                <a href="#" class="list-group-item wd-border-none">
                     <i class="fas fa-list"></i>
                     <span class="d-none d-l-inline-block d-xl-inline-block">Lists</span>
 
                 </a>
-                <a href="#" class="list-group-item">
+                <a href="#" class="list-group-item wd-border-none">
                     <i class="fas fa-user"></i>
                     <span class="d-none d-l-inline-block d-xl-inline-block">Profile</span>
                 </a>
-                <a href="#" class="list-group-item">
+                <a href="#" class="list-group-item wd-border-none">
                     <span class="fa-stack fa-1x wd-more-options-cog">
                         <i class="fas fa-circle fa-stack-1x"></i>
                         <i class="fas fa-ellipsis-h fa-stack-1x fa-inverse wd-ellipsis-small"></i>
@@ -73,27 +73,27 @@
                     <i class="fas fa-cog fa p-1 wd-settings-cog"></i>
                 </div>
             </div>
-            <ul class="nav nav-tabs mt-2 mb-2">
+            <ul class="nav nav-tabs mt-2 mb-1 wd-border-none">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">For you</a>
+                    <a class="nav-link wd-nav-link-active" href="#">For you</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Trending</a>
+                    <a class="nav-link wd-text-color-gray wd-font-weight-500" href="#">Trending</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">News</a>
+                    <a class="nav-link wd-text-color-gray wd-font-weight-500" href="#">News</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sports</a>
+                    <a class="nav-link wd-text-color-gray wd-font-weight-500" href="#">Sports</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link d-none d-md-block" href="#">Entertainment</a>
+                    <a class="nav-link wd-text-color-gray wd-font-weight-500 d-none d-md-block" href="#">Entertainment</a>
                 </li>
             </ul>
 
 
             <ul class="list-group border-0">
-                <li class="list-group-item border-0 m-0 p-0">
+                <li class="list-group-item m-0 p-0 wd-border-none">
                     <div class="position-relative text-white">
                         <img src="../../assets/spacex.png" class="img-fluid" alt="spacex">
                         <div class="fw-bold fs-2 position-absolute wd-top-bottom-10px">SpaceX's
@@ -102,14 +102,14 @@
                     </div>
 
                 </li>
-                <li class="list-group-item d-flex align-items-start">
+                <li class="list-group-item d-flex align-items-start wd-border-top-none wd-border-bottom-none wd-border-lightgray">
                     <div class="left-child" style="width:85%">
-                        <span class="wd-border-gray" style="color:grey;">Web Development</span>
+                        Web Development
                         <span class="row"></span>
                         <span>
                             <span class="fw-bold">ReactJS</span>
                             <i class="fas fa-check-circle ml-2"></i>
-                            <small class="wd-border-gray wd-text-color">- 2h</small>
+                            <small class="wd-text-color-gray">- 2h</small>
                         </span>
                         <span class="row"></span>
                         <span class="fw-bold">ReactJS is a component based front-end library that makes it very easy to
@@ -121,51 +121,50 @@
                     </div>
                 </li>
 
-                <li class="list-group-item d-flex align-items-start">
+                <li class="list-group-item d-flex align-items-start wd-border-top-none wd-border-bottom-none wd-border-lightgray">
                     <div class="left-child" style="width:85%">
-
                         <span>
                             <span class="fw-bold">JavaScript</span>
                             <i class="fas fa-check-circle ml-2"></i>
-                            <small class="wd-border-gray wd-text-color">- 2h</small>
+                            <small class="wd-text-color-gray">- 2h</small>
                         </span>
                         <span class="row"></span>
                         <span class="fw-bold">JavaScript is a programming language that can run on browsers as
                             well as on desktops</span>
                         <span class="row"></span>
-                        <span class="wd-border-gray wd-text-color">123K Tuits</span>
+                        <span class="wd-text-color-gray">123K Tuits</span>
                     </div>
                     <div class="right-child" style="width:15%">
                         <img src="../../assets/javascript.png" class="img-fluid round wd-img-round" alt="javascript">
                     </div>
                 </li>
 
-                <li class="list-group-item d-flex align-items-start">
+                <li class="list-group-item d-flex align-items-start wd-border-top-none wd-border-bottom-none wd-border-lightgray">
                     <div class="left-child" style="width:85%">
-                        <span class="wd-border-gray wd-text-color">Web Development</span>
+                        <span class="wd-text-color-gray">Web Development</span>
                         <span class="row"></span>
                         <span>
                             <span class="fw-bold">jQuery</span>
                         </span>
                         <span class="row"></span>
-                        <span class="wd-border-gray wd-text-color">123K Tuits</span>
+                        <span class="wd-text-color-gray">123K Tuits</span>
                     </div>
                     <div class="right-child" style="width:15%">
                         <img src="../../assets/jquery.png" class="img-fluid round wd-img-round" alt="jquery">
                     </div>
                 </li>
 
-                <li class="list-group-item d-flex align-items-start">
+                <li class="list-group-item d-flex align-items-start wd-border-top-none wd-border-bottom-none wd-border-lightgray">
                     <div class="left-child" style="width:85%">
-                        <span class="wd-border-gray wd-text-color">Web Development</span>
+                        <span class="wd-text-color-gray">Web Development</span>
                         <span class="row"></span>
                         <span>
                             <span class="fw-bold">NodeJS</span>
                             <i class="fas fa-check-circle ml-2"></i>
-                            <small class="wd-border-gray wd-text-color">- 2h</small>
+                            <small class="wd-text-color-gray">- 2h</small>
                         </span>
                         <span class="row"></span>
-                        <span class="wd-border-gray wd-text-color">123K Tuits</span>
+                        <span class="wd-text-color-gray">123K Tuits</span>
                     </div>
                     <div class="right-child" style="width:15%">
                         <img src="../../assets/nodejs.png" class="img-fluid" alt="tesla">
@@ -175,11 +174,11 @@
             </ul>
         </div>
         <div class="col-lg-4 d-none d-lg-block">
-            <ul class="list-group">
-                <li class="list-group-item">
+            <ul class="list-group wd-border-rounded-top-left wd-border-rounded-top-right">
+                <li class="list-group-item wd-bg-color-gray wd-border-none  ">
                     <span class="text-name fw-bold">Who to follow</span>
                 </li>
-                <li class="list-group-item">
+                <li class="list-group-item wd-bg-color-gray wd-border-none">
                     <div class="row">
                         <div class="col-sm-3 p-0">
                             <img src="../../assets/java.jpg" class="rounded-circle img-fluid w-75" alt="Java">
@@ -192,25 +191,8 @@
                         <button type="button" class="btn btn-primary rounded-pill wd-follow-btn-lite">Follow</button>
                     </div>
                 </li>
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-sm-3 p-0">
-                            <img src="../../assets/relativityspace.jpg" class="rounded-circle img-fluid w-75"
-                                 alt="Relativity Space">
-                        </div>
-                        <div class="col-sm-9 p-0 wd-text position-relative text-nowrap align-content-start">
-                            <span class="text-name fw-bold">Relativity Space</span>
-                            <i class="fas fa-check-circle no-wrap"></i>
-                            <span class="d-block position-absolute">@relativityspace</span>
-                        </div>
-                        <br/>
-                        <div class="col-3">
-                            <button type="button" class="btn btn-primary rounded-pill wd-follow-btn-lite">Follow
-                            </button>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
+
+                <li class="list-group-item wd-bg-color-gray wd-border-none">
                     <div class="row">
                         <div class="col-sm-3 p-0">
                             <img src="../../assets/virgin.png" class="rounded-circle img-fluid w-75"
@@ -225,33 +207,12 @@
                     </div>
                 </li>
 
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-sm-3 p-0">
-                            <img src="../../assets/nasa.png" class="rounded-circle img-fluid w-75" alt="NASA">
-                        </div>
-                        <div class="col-sm-9 p-0 wd-text">
-                            <span class="text-name fw-bold ">NASA</span>
-                            <i class="fas fa-check-circle nowrap"></i>
-                            <span class="d-block">@nasa</span>
-                        </div>
-                        <button type="button" class="btn btn-primary rounded-pill wd-follow-btn-lite">Follow</button>
-                    </div>
-                </li>
+                <div class="wd-border-rounded-bottom-left wd-border-rounded-bottom-right">
+                    <li class="list-group-item wd-bg-color-gray wd-border-none">
+                        <button class="wd-btn-show-more wd-bg-color-gray" href="#">Show More</button>
+                    </li>
+                </div>
 
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-sm-3 p-0">
-                            <img src="../../assets/tesla.jpg" class="rounded-circle img-fluid w-75" alt="Tesla">
-                        </div>
-                        <div class="col-sm-9 p-0 wd-text position-relative text-nowrap align-content-start">
-                            <span class="text-name fw-bold ">Tesla</span>
-                            <i class="fas fa-check-circle"></i>
-                            <span class="d-block">@tesla</span>
-                        </div>
-                        <button type="button" class="btn btn-primary rounded-pill wd-follow-btn-lite">Follow</button>
-                    </div>
-                </li>
             </ul>
         </div>
     </div>
