--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -16,6 +16,7 @@
       <ul class="list-group">
         <li class="list-group-item"><a href="home.html">Home</a></li>
         <li class="list-group-item"><a href="explore/index.html">Explore</a></li>
+        <li class="list-group-item"><a href="explore/index-challenge.html">Explore – Challenge</a></li>
         <li class="list-group-item"><a href="#">Notifications</a></li>
         <li class="list-group-item"><a href="#">Messages</a></li>
         <li class="list-group-item"><a href="bookmarks/index.html">Bookmarks</a></li>
