--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -15,11 +15,17 @@
       <h1 class="mb-3 mt-3">Tuiter Navigation</h1>
       <ul class="list-group">
         <li class="list-group-item"><a href="home.html">Home</a></li>
-        <li class="list-group-item"><a href="explore/index.html">Explore</a></li>
-        <li class="list-group-item"><a href="explore/index-challenge.html">Explore – Challenge</a></li>
+        <li class="list-group-item">
+          <a href="explore/index.html">Explore</a>
+        </li>
+        <li class="list-group-item">
+          <a href="explore/index-challenge.html">Explore – Challenge</a>
+        </li>
         <li class="list-group-item"><a href="#">Notifications</a></li>
         <li class="list-group-item"><a href="#">Messages</a></li>
-        <li class="list-group-item"><a href="bookmarks/index.html">Bookmarks</a></li>
+        <li class="list-group-item">
+          <a href="bookmarks/index.html">Bookmarks</a>
+        </li>
         <li class="list-group-item"><a href="#">Lists</a></li>
         <li class="list-group-item"><a href="profile.html">Profile</a></li>
         <li class="list-group-item"><a href="tuit.html">Tuit</a></li>
