--- a/public/tuiter/explore/index-challenge.html
+++ b/public/tuiter/explore/index-challenge.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container mt-4 mb-4">
       <div class="row">
-        <div class="col-sm-2 d-none d-sm-block col-lg-1 col-xl-2">
+        <div class="col-sm-2 d-none d-sm-block col-lg-1 col-xl-2 wd-font-size-18 wd-font-weight-300">
           <div class="list-group">
             <div class="list-group-item wd-border-none">
               <i class="fab fa-twitter wd-icon-blue"></i>
@@ -25,47 +25,47 @@
             <a href="#" class="list-group-item wd-border-none">
               <i class="fas fa-home"></i>
               <span class="d-none d-l-inline-block d-xl-inline-block"
-                >Home</span
+                > Home</span
               >
             </a>
             <a
               href="#"
-              class="list-group-item wd-border-none active"
+              class="list-group-item wd-border-none wd-font-weight-750"
               aria-current="true"
             >
               <i class="fas fa-hashtag"></i>
               <span class="d-none d-l-inline-block d-xl-inline-block"
-                >Explore</span
+                > Explore</span
               >
             </a>
             <a href="#" class="list-group-item wd-border-none">
               <i class="fas fa-bell"></i>
               <span class="d-none d-l-inline-block d-xl-inline-block"
-                >Notifications</span
+                > Notifications</span
               >
             </a>
             <a href="#" class="list-group-item wd-border-none">
               <i class="fas fa-envelope"></i>
               <span class="d-none d-l-inline-block d-xl-inline-block"
-                >Messages</span
+                > Messages</span
               >
             </a>
             <a href="#" class="list-group-item wd-border-none">
               <i class="fas fa-bookmark"></i>
               <span class="d-none d-l-inline-block d-xl-inline-block"
-                >Bookmarks</span
+                > Bookmarks</span
               >
             </a>
             <a href="#" class="list-group-item wd-border-none">
               <i class="fas fa-list"></i>
               <span class="d-none d-l-inline-block d-xl-inline-block"
-                >Lists</span
+                > Lists</span
               >
             </a>
             <a href="#" class="list-group-item wd-border-none">
               <i class="fas fa-user"></i>
               <span class="d-none d-l-inline-block d-xl-inline-block"
-                >Profile</span
+                > Profile</span
               >
             </a>
             <a href="#" class="list-group-item wd-border-none">
@@ -76,13 +76,13 @@
                 ></i>
               </span>
               <span class="d-none d-l-inline-block d-xl-inline-block"
-                >More</span
+                > More</span
               >
             </a>
             <a href="#">
               <button
                 type="button"
-                class="btn btn-primary mt-1 rounded-pill w-100"
+                class="btn btn-primary mt-1 rounded-pill w-100 wd-tuiter-signature-blue"
               >
                 Tuit
               </button>
