--- a/public/tuiter/explore/index-challenge.html
+++ b/public/tuiter/explore/index-challenge.html
@@ -14,7 +14,7 @@
     <link href="index-challenge.css" rel="stylesheet" />
   </head>
 
-  <body>
+  <body class="wd-body">
     <div class="container mt-4 mb-4">
       <div class="row">
         <div class="col-sm-2 d-none d-sm-block col-lg-1 col-xl-2 wd-font-size-18 wd-font-weight-300">
