--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <h1 class="mt-3 mb-3">CS 5610: Web Dev Assignments</h1>
     <ul class="list-group">
       <li class="list-group-item"><a href="labs/a5/index.html">Lab 5: JavaScript</a></li>
+      <li class="list-group-item"><a href="labs/a5/todos/index.html">Lab 5: ToDo List</a></li>
       <li class="list-group-item"><a href="tuiter/navigation.html">Tuiter</a></li>
     </ul>
   </div>
