--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
           <a href="labs/a5/todos/index.html">Lab 5: ToDo List</a>
         </li>
         <li class="list-group-item">
+          <a href="labs/a5/todos/index.html">Lab 5: ToDo List</a>
+        </li>
+        <li class="list-group-item">
           <a href="tuiter/navigation.html">Tuiter</a>
         </li>
       </ul>
