--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -7,7 +7,10 @@
       rel="stylesheet"
     />
     <link href="../../vendors/bootswatch/bootstrap.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" rel="stylesheet"/>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      rel="stylesheet"
+    />
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <link href="index.css" rel="stylesheet" />
     <title>Explore</title>
