--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
           <a href="labs/a5/todos/index.html">Lab 5: ToDo List</a>
         </li>
         <li class="list-group-item">
-          <a href="labs/a5/todos/index.html">Lab 5: ToDo List</a>
+          <a href="tuiter/explore/index.html">Assignment 5: Explore</a>
         </li>
         <li class="list-group-item">
           <a href="tuiter/navigation.html">Tuiter</a>
