--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
           <a href="tuiter/explore/index.html">Assignment 5: Explore</a>
         </li>
         <li class="list-group-item">
+          <a href="tuiter/HomeScreen/index.html">Assignment 5 [Challenge Section]: Home Screen</a>
+        </li>
+        <li class="list-group-item">
           <a href="tuiter/navigation.html">Tuiter</a>
         </li>
       </ul>
