--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -14,7 +14,7 @@
     <div class="container">
       <h1 class="mb-3 mt-3">Tuiter Navigation</h1>
       <ul class="list-group">
-        <li class="list-group-item"><a href="home.html">Home</a></li>
+        <li class="list-group-item"><a href="HomeScreen/index.html">Home</a></li>
         <li class="list-group-item">
           <a href="explore/index.html">Explore</a>
         </li>
