--- a/public/index.html
+++ b/public/index.html
@@ -3,28 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>CS 5610 Assignments</title>
-    <link href="vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="container">
-      <h1 class="mt-3 mb-3">CS 5610: Web Dev Assignments</h1>
-      <ul class="list-group">
-        <li class="list-group-item">
-          <a href="labs/a5/index.html">Lab 5: JavaScript</a>
-        </li>
-        <li class="list-group-item">
-          <a href="labs/a5/todos/index.html">Lab 5: ToDo List</a>
-        </li>
-        <li class="list-group-item">
-          <a href="tuiter/explore/index.html">Assignment 5: Explore</a>
-        </li>
-        <li class="list-group-item">
-          <a href="tuiter/HomeScreen/index.html">Assignment 5 [Challenge Section]: Home Screen</a>
-        </li>
-        <li class="list-group-item">
-          <a href="tuiter/navigation.html">Tuiter</a>
-        </li>
-      </ul>
-    </div>
+    <div id="root"></div>
   </body>
 </html>
