--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
     <title>CS 5610 Assignments</title>
   </head>
   <body>
-    <!-- <div id="root"></div> -->
+    <div id="root"></div>
   </body>
 </html>
